src/test/deca/context/invalid/sansObj/neq-binaire-bool.deca
// Description:
//          Utilisation de l'opérateur != avec un int et un booléen
//
// Résultat:
//Comparaison entre deux membres incompatibles
{
    int a = 10;
    boolean b = false;
    boolean c = (a != b);
}